--- a/application.properties
+++ b/application.properties
@@ -1,7 +1,9 @@
 server.port=8191
 # when we use native file then we use active  =native
-spring.profiles.active=native
+#spring.profiles.active=native
 management.endpoints.web.exposure.include=*
 
 #cloud properties from git 
 spring.cloud.config.server.git.uri=https://github.com/vinitkr123/spring-cloud-config-store
+spring.cloud.config.server.git.search-paths=- '*service'
+
