--- a/mem-service/member.properties
+++ b/mem-service/member.properties
@@ -1,1 +1,5 @@
-name=Calling from default memberservice
+member.rent.min: 8
+member.rent.max: 31
+member.rent.price.discount: 3
+member.rent.vehicle.default.model: cross over
+member.rent.duration: all
