--- a/application.properties
+++ b/application.properties
@@ -5,5 +5,6 @@ management.endpoints.web.exposure.include=*
 
 #cloud properties from git 
 spring.cloud.config.server.git.uri=https://github.com/vinitkr123/spring-cloud-config-store
-spring.cloud.config.server.git.search-paths=- mem-service
+spring.cloud.config.server.git.search-paths=- '*/service'
+
 
